# autistic-cow

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: main.tsx
client/src/app/: App.tsx  global.css
client/src/i18n/: index.ts
client/src/net/: account.ts  api.ts  batcher.ts  missions.ts  (+2 more)
client/tests/: bands.test.ts  camel.test.ts  child-safety.test.ts  combo.test.ts  ids.test.ts  judge-pools.test.ts  judge.test.ts  maxrage.test.ts  missions.test.ts  spawn.test.ts
docs/: 01-GAME-LOOP-V1.md  02-DATA-SCHEMA-V1.md  03-ARCHITECTURE.md
docs/adr/: adr-001-uuidv7-centralized-ids.md  adr-002-bitecs.md  adr-003-server-authoritative.md  adr-004-append-only-event-log.md  adr-005-shadow-exclusion.md  adr-006-react-19.md  adr-007-uuid-utils-py313.md  adr-008-partition-dont-shard.md  adr-009-inprocess-dispatcher.md  adr-010-async-multiplayer.md  adr-011-own-auth.md  adr-012-cow-autonomy.md  adr-013-judge-has-no-hands.md  adr-014-art-direction.md  adr-015-real-map-pipeline.md  adr-016-map-licensing-providers.md  adr-017-district-gen-toolchain.md  adr-018-tiered-name-detail-policy.md  adr-019-children-clear-of-camel.md
server/: Dockerfile  alembic.ini  pyproject.toml
server/app/: main.py
server/app/api/v1/: __init__.py  auth.py  consents.py  leaderboards.py  me.py  missions.py  photos.py  sessions.py
server/app/core/: deps.py  dispatch.py  ids.py  security.py  settings.py  tuning.py
server/app/db/: repo.py  schema.sql  session.py
server/app/domain/economy/: energy.py  levels.py
server/app/domain/judge/: axis.py
server/app/domain/photos/: authenticity.py  classifier.py  exif.py  phash.py  storage.py
server/app/domain/sessions/: handlers.py
server/app/schemas/: __init__.py
server/app/workers/: main.py
server/migrations/: env.py
server/migrations/versions/: 0001_genesis.py  0002_nerves_levels_naming.py  0003_photo_energy.py
server/tests/: test_dispatch.py  test_energy.py  test_ids.py  test_judge_axis.py  test_levels.py  test_repo_coercion.py  test_routes.py
shared/codgen/: README.md
shared/i18n/: de.json  en.json  ru.json
shared/tuning/: tuning.json
tools/: codegen.sh  i18n-parity.mjs  no-raw-uuid-gen.sh  no-react-in-game.mjs  seed_dev.py  tuning-validate.mjs
tools/district-gen/: pyproject.toml
tools/district-gen/config/: generation.json  poi_roles.json
tools/district-gen/district_gen/: __main__.py  bbox.py  cli.py  curate.py  emit.py  extract.py  gameplay.py  ir.py  project.py  render.py  report.py  roles.py  scene.py  seed_sql.py  simplify.py
(+57 files in other folders)
