[project]
name = "autistic-cow-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pydantic[email]>=2.8",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "uuid-utils>=0.9",          # UUIDv7 until stdlib (py3.14) / PG18 native
  "argon2-cffi>=23.1",
  "pyjwt>=2.9",
  "authlib>=1.3",             # Google/Apple OAuth
  "redis>=5.0",
  "arq>=0.26",                # task queue (photo pipeline, retention)
  "httpx>=0.27",
  "pillow>=10.4.0",
  "botocore>=1.34.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "mypy>=1.11", "ruff>=0.6", "datamodel-code-generator>=0.26"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
